Fix header z-index & logo link

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .main {
